spacing issues and customization

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ body {
   
   #logo {
     float: left;
-    width: 250px;
+    width: 290px;
     height: 90px;
     font-family: Georgia, Times, "Times New Roman", serif;
     font-size: 30px;
@@ -140,6 +140,10 @@ body {
     float: right;
     border: 1px solid #ddd;
     margin-bottom: 20px;
+  }
+
+  .social{
+    margin-left: 10px;
   }
 
   h3, .sidebar, h2 {
@@ -337,8 +341,8 @@ body {
 
   @media only screen and (min-width: 769px) and (max-width: 980px) {
     .main-section{
-      margin-left: 90px;
-      width: 400px;
+      margin-left: 70px;
+      width: 475px;
     }
 
     #main-container{
@@ -354,7 +358,7 @@ body {
     }
 
     .sidebar{
-      margin-right: 40px;
+      margin-right: 30px;
     }
 
     .auth-image{
